# nihility-gsv

./: .gitignore  Cargo.toml  README.md  install.bat  install.sh
.cargo/: config.toml
.github/workflows/: release.yml
src/: error.rs  gsv.rs  init.rs  lib.rs  main.rs  ssl.rs  text.rs
src/gsv/: mod.rs
src/init/: libtorch.rs
src/text/: g2p_en.rs  g2pw.rs  mod.rs  num.rs
tests/: init.rs  rpc_client.rs
