[package]
name = "nihility-gsv"
version = "0.3.0"
edition = "2024"
description = "A GPT_Sovits inference lib in Rust base on libtorch"
license = "MIT"

[[bin]]
name = "nihility-gsv-cli"
path = "bin/cli.rs"

[[bin]]
name = "nihility-gsv-api"
path = "bin/api.rs"

[[bin]]
name = "nihility-gsv-rpc"
path = "bin/rpc.rs"

[features]
default = []
enable_jp = ["jpreprocess"]

[dependencies]
tokenizers = { version = "0.22.0", default-features = false, features = ["onig"] }
tch = { version = "0.21.0", git = "https://github.com/LaurentMazare/tch-rs.git" }
wav_io = "0.1"
jieba-rs = { version = "0.8", features = ["tfidf", "textrank"] }
num2en = "1.0.0"
pest = "2.8"
pest_derive = "2.8"
serde_json = "1.0"
jpreprocess = { version = "0.12", default-features = false, features = ["naist-jdic"], optional = true }

clap = { version = "4.5", features = ["derive"] }
tracing = { version = "0.1" }
thiserror = { version = "2.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
lazy_static = { version = "1.5" }
chrono = { version = "0.4", features = ["clock"] }
actix-web = { version = "4.11" }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }

nihility-config = { version = "0.1.2" }
nihility-log = { version = "0.1.1" }
nihility-rpc = { version = "0.1.1" }
tonic = { version = "0.14", default-features = false, features = ["codegen", "router", "server", "channel"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true